--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,19 +14,23 @@ dev = [
 # project
 [project]
 authors = [{name = "Derek Wan", email = "d.wan@icloud.com"}]
-dependencies = []
-name = "dycw-template"
+dependencies = [
+  "dycw-utilities>=0.121.0",
+  "python-dotenv>=1.1.0",
+  "whenever>=0.8.0",
+]
+name = "whenever-bug"
 readme = "README.md"
 requires-python = ">= 3.13"
-version = "0.1.0"
+version = "0.1.1"
 
 # bump-my-version
 [tool.bumpversion]
 allow_dirty = true
-current_version = "0.1.0"
+current_version = "0.1.1"
 
 [[tool.bumpversion.files]]
-filename = "src/dycw_template/__init__.py"
+filename = "src/whenever_bug/__init__.py"
 replace = "__version__ = \"{new_version}\""
 search = "__version__ = \"{current_version}\""
 
@@ -54,7 +58,7 @@ parallel = true
 include = ["src"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/dycw_template"]
+packages = ["src/whenever_bug"]
 
 # nitpick
 [tool.nitpick]
@@ -98,7 +102,7 @@ addopts = [
   "-ra",
   "-vv",
   "--color=auto",
-  "--cov=dycw_template",
+  "--cov=whenever_bug",
   "--cov-config=pyproject.toml",
   "--cov-report=html",
   "--strict-markers",
